<resources>
    <string name="app_name">Pulsus</string>
    <string name="square_task">Square Task</string>
    <string name="balloon_game">Balloon Game</string>
    <string name="self_report">Self-Report</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="profile_action">Profile</string>
    <string name="logout_action">Logout</string>
    <string name="enabled_reminders_label">Enable Reminders</string>
    <string name="connected_account_label">Connected Account: email@school.edu</string>
    <string name="complete_baseline_label">Complete Baseline Self-Report</string>

    <!-- for omhclientlib -->
    <string name="dsu_provider_authorities">io.smalldatalab.android.gonogo.account</string>

    <!--dsu settings-->
    <string name="dsu_client_id">io.smalldata.android.goNoGo</string>
    <string name="dsu_client_secret">fr2fedsvfQW9Aa7GQtB^n6mf&amp;dY</string>
    <string name="dsu_client_url">http://aws-qa.smalldata.io/dsu/</string> <!-- Use QA Server for now -->
    <string name="edit_url">(Edit server address)</string>
    <string name="or">~ or ~</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>

    <string name="start_task">Start</string>
    <string name="square_task_instructions">Welcome to the Square Task.\n\n\nOnce you start, you will be presented with a rectangle. When the rectangle turns green, tap anywhere on the screen as quickly as possible. When it turns blue, do not respond at all. \n\nThe test will take approximately 3 min.</string>
    <string name="plus">Plus</string>
    <string name="balloon_game_instructions">Welcome to the Balloon Game.\n\nYour goal for this game is to make as much money as possible by inflating the balloons. To play, tap the pump button to inflate the balloon and earn 25 cents for each pump. To collect your money for each balloon, hit the collect button. But remember, the more you pump the balloon, the greater chance of it bursting. The max amount you can win per balloon is $2.50. When it bursts, you get no money for that balloon. Your goal is to earn as much possible over the 15 balloons.</string>
    <string name="total_earnings_default_text">Balloon 1 out of 15.\nTotal Earnings: $0.00</string>
    <string name="potential_gain_default_text">Potential Gain: \n$0.00</string>
    <string name="balloon_game_html_instructions"><![CDATA[Welcome to the Balloon Game.<br/><br/>Your goal for this game is to make as much money as possible by inflating the balloons. To play, tap the <b>pump button to inflate the balloon and earn 25 cents for each pump</b>. To collect your money for each balloon, hit the <b<collect button</b>. But remember, the more you pump the balloon, the greater chance of it bursting. The max amount you can win <b>per balloon</b> is $2.50. When it bursts, you get no money for that balloon. Your goal is to earn as much possible over the <b>15 balloons</b>.]]></string>

    <!--omh schema settings -->
    <string name="schema_namespace">cornell</string>
    <string name="vas_schema_name">vas_results</string>
    <string name="square_task_schema_name">go_no_go_test_results</string>
    <string name="balloon_schema_name">balloon_analogue_risk_test_results</string>
    <string name="schema_version">1.0</string>
    <string name="acquisition_source_name">Pulsus-Android</string>
    <string name="acquisition_modality">self-reported</string>
</resources>
