<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/invalidColor">


    <TextView
        android:text="Pulsus"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:textColor="@color/whiteColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:textSize="16sp"
            android:singleLine="true"
            android:nextFocusDown="@+id/password"
            android:backgroundTint="@color/whiteColor"
            android:textColor="@color/whiteColor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/password_hint"
                android:textSize="16sp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:backgroundTint="@color/whiteColor"
                android:textColor="@color/whiteColor"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/login"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/or"
            android:textSize="12sp"
            android:padding="15dp"
            android:textColor="@color/whiteColor"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_dsu_url"
            android:text="@string/edit_url"
            android:textColor="#07c"
            android:layout_alignParentRight="true"
            android:gravity="right"/>
    </LinearLayout>


</LinearLayout>
